--- a/Album.html
+++ b/Album.html
@@ -7,6 +7,11 @@
 </head>
 <body>
 <table>
+  <thead>
+    <th clospan="3">
+      My Online Photo Album
+    </th>
+  </thead>
   <tbody>
   <tr>
     <td></td>
